# ShadowCache

./: .env.example  .gitignore  LICENSE  README.md  cache_system.py  config.py  database.py  demo.py  example_prometheus.yml  logger.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
shadowcache/: __init__.py  core.py  exceptions.py  logger.py  metrics.py  parser.py
tests/: __init__.py  conftest.py  test_cache_system.py  test_core.py  test_database.py  test_metrics.py  test_parser.py
