[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "shadowcache"
version = "0.1.0"
description = "Transparent Redis caching for raw SQL connections -- no ORM required"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "redis>=4.0",
    "mysql-connector-python>=8.0",
    "sqlglot>=20.0",
    "prometheus-client>=0.16",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["shadowcache*"]
