[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shadowcache"
version = "0.1.0"
description = "Transparent Redis caching for raw SQL connections - no ORM required"
readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT"
authors = [{name = "Pratham Bhosale"}]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "redis>=4.0",
    "mysql-connector-python>=8.0",
    "sqlglot>=20.0",
]

[project.urls]
Homepage = "https://github.com/pratham2402/ShadowCache"
Repository = "https://github.com/pratham2402/ShadowCache"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["shadowcache*"]
